--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,7 @@ jobs:
           token: ${{ secrets.PAT }}
       - name: Generate K8S Manifest Files
         run: |
-          node ./k8s/generate ${{ inputs.project }} ${{ inputs.run_id }}
+          node generate ${{ inputs.project }} ${{ inputs.run_id }}
       - name: Update new change to repository
         run: |
           git config --global safe.directory '*'
